--- a/project/nginx/frontend/css/styles.css
+++ b/project/nginx/frontend/css/styles.css
@@ -5,92 +5,159 @@
   --clr-bg-btn: #0946A6;
   --clr-bg-title: #4D4A4A;
   --clr-red: #B63A3A;
+  --clr-green: #62E54C;
 
-  --ic-lg: clamp(40px, 40px + 0.2rem, 50px);
-  --ic-md: clamp(30px, 30px + 0.2rem, 40px);
-
-  --fs-h1: clamp(4rem, 7vw + 1rem, 10rem);
-  --fs-h2: clamp(2rem, 4.5vw + 1rem, 6rem);
-  --fs-h3: clamp(2rem, 4vw + 1rem, 5rem);
-  --fs-h4: clamp(1.5rem, 3vw + .5rem, 4rem);
-  --fs-h5: clamp(1rem, 1.5vw + .5rem, 2rem);
+  /* icon-size */
+  --ic-xl: min(50px, calc(50px * 0.15) + calc(50vw * 0.045));
+  --ic-lg: min(40px, calc(40px * 0.15) + calc(40vw * 0.045));
+  --ic-md: min(30px, calc(30px * 0.15) + calc(30vw * 0.045));
+  --ic-sm: min(20px, calc(20px * 0.15) + calc(20vw * 0.045));
 
   --fs-h1-stk: clamp(0.5rem, .7vw + 0.2rem, 1.15rem);
   --fs-h3-stk: clamp(0.4rem, .5vw + 0.2rem, 1rem);
 
+  /* font-size */
   --fs-xxl: 2rem;
   --fs-xl: 1.5rem;
   --fs-lg: 1.25rem;
   --fs-md: 1rem;
   --fs-sm: 0.75rem;
-}
 
-input {
-  background-color: transparent;
-}
+  /* border-size */
+  --bs-xxl: 15px;
+  --bs-xl: 8px;
+  --bs-lg: 5px;
+  --bs-md: 3px;
 
-.form-check-input[type=checkbox] {
-  border-radius: 0;
+  /* margin-size */
+  --mg-xxl: 45px;
+  --mg-xl: 30px;
+  --mg-lg: 20px;
+  --mg-md: 15px;
+
+  /* padding-size */
+  --pd-lg: 5px;
+  --pd-md: 3px;
 }
 
 /* XX-Large Size */
 @media (max-width: 1400px) {
+  :root {
+    --fs-xxl: 1.5rem;
+    --fs-xl: 1.125rem;
+    --fs-lg: 0.95rem;
+    --fs-md: 0.75rem;
+    --fs-sm: 0.6rem;
+
+    --bs-xxl: 10px;
+
+    --mg-xxl: 30px;
+    --mg-xl: 20px;
+    --mg-lg: 10px;
+    --mg-md: 5px;
+
+    --pd-lg: 3px;
+    --pd-md: 2px;
+  }
 }
 
 /* Large Size */
 @media (max-width: 992px) {
+  :root {
+    --fs-xxl: 1.125rem;
+    --fs-xl: 0.95rem;
+    --fs-lg: 0.75rem;
+    --fs-md: 0.6rem;
+    --fs-sm: 0.45rem;
+
+    --bs-xxl: 7px;
+    --bs-xl: 5px;
+    --bs-lg: 3px;
+    --bs-md: 2px;
+
+    --mg-xxl: 20px;
+    --mg-xl: 10px;
+    --mg-lg: 5px;
+    --mg-md: 2.5px;
+
+    --pd-lg: 2px;
+    --pd-md: 1.25px;
+  }
 }
 
 /* Medium Size */
 @media (max-width: 768px) {
   :root {
-    --fs-xxl: 1.75rem;
-    --fs-xl: 1.25rem;
-    --fs-lg: 1.125rem;
-    --fs-md: 0.975rem;
-    --fs-sm: 0.7rem;
+    --fs-xxl: 0.95rem;
+    --fs-xl: 0.75rem;
+    --fs-lg: 0.5rem;
+    --fs-md: 0.375rem;
+    --fs-sm: 0.35rem;
+
+    --bs-xxl: 5px;
+    --bs-xl: 4px;
+    --bs-lg: 2px;
+    --bs-md: 1.5px;
+
+    --mg-xxl: 10px;
+    --mg-xl: 5px;
+    --mg-lg: 3px;
+    --mg-md: 1.8px;
+
+    --pd-lg: 1.25px;
+    --pd-md: 1px;
   }
 }
 
-h1 {
-  font-size: var(--fs-h1);
-  position: relative;
-  z-index: 1;
+/* Small Size */
+@media (max-width: 576px) {
+  :root {
+  }
 }
 
-h2 {
-  font-size: var(--fs-h2);
-  position: relative;
-  z-index: 1;
+.fs-sm {
+  font-size: var(--fs-sm);
+}
+.fs-md {
+  font-size: var(--fs-md);
+}
+.fs-lg {
+  font-size: var(--fs-lg);
+}
+.fs-xl {
+  font-size: var(--fs-xl);
+}
+.fs-xxl {
+  font-size: var(--fs-xxl);
+}
+.h-md {
+  font-size: min(40px, max(calc(40px * 0.15) + calc(40vw * 0.038), calc(40px * 0.15) + calc(40vh * 0.038)));
 }
 
-h3 {
-  font-size: var(--fs-h3);
-  position: relative;
-  z-index: 1;
+input {
+  background-color: transparent;
+}
+input:focus {
+  border: transparent;
+  outline: none;
+  box-shadow: none;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  appearance: none;
+  -webkit-text-fill-color: var(--clr-text);
+  -webkit-box-shadow: 0 0 0px 1000px black inset !important;
 }
 
-h4 {
-  font-size: var(--fs-h4);
-  position: relative;
-  z-index: 1;
-}
-
-h5 {
-  font-size: var(--fs-h5);
-  position: relative;
-  z-index: 1;
-}
-
-p {
-  margin: 0;
+.form-check-input[type=checkbox] {
+  border-radius: 0;
+  margin: var(--mg-xl) 0;
 }
 
 .font-stk-h1 {
   -webkit-text-stroke: var(--fs-h1-stk) var(--clr-shadow);
   paint-order: stroke fill;
 }
-
 .font-stk-h3 {
   -webkit-text-stroke: var(--fs-h3-stk) var(--clr-shadow);
   paint-order: stroke fill;
@@ -102,29 +169,28 @@ p {
   font-weight: 400;
   font-style: normal;
 }
-
 .font-train {
   font-family: "Train One", system-ui;
   font-weight: 400;
   font-style: normal;
   color: white;
 }
-
 .font-bs-bold {
   font-weight: 700;
   font-family: "Orbitron", sans-serif;
   color: var(--clr-text);
+  margin: 0;
 }
-
 .font-bs {
   font-weight: 500;
   font-family: "Orbitron", sans-serif;
   color: var(--clr-text);
+  margin: 0;
 }
 
 body {
   display: flex;
-  height: max(100vh, 922px);
+  height: 100vh;
   background-color: black;
   justify-content: center;
   align-items: center;
@@ -142,7 +208,7 @@ body {
 
 .border-line {
   position: relative;
-  border: 5px solid var(--clr-border);
+  border: var(--bs-lg) solid var(--clr-border);
   width: 90%;
   height: 90%;
   border-radius: 20px;
@@ -151,15 +217,16 @@ body {
 .btn-eye {
   cursor: pointer;
 }
-
-.btn-eye:hover {
+.btn-hover:hover {
   transform: scale(1.2);
 }
 
 .input-group-custom {
-  border: 3px solid var(--clr-border);
+  border: var(--bs-md) solid var(--clr-border);
   background-color: transparent;
   overflow: hidden;
+  margin: var(--mg-lg);
+  padding: var(--pd-lg);
 }
 
 .input-group-custom:focus-within {
@@ -178,14 +245,21 @@ body {
   border-radius: 0;
 }
 
-.icon-custom {
+.ic-xl {
+  width: var(--ic-xl);
+  aspect-ratio: 1 / 1;
+}
+.ic-lg {
   width: var(--ic-lg);
   aspect-ratio: 1 / 1;
-  margin: 2%;
+}
+.ic-md {
+  width: var(--ic-md);
+  aspect-ratio: 1 / 1;
 }
 
 .input-icon-custom {
-  width: var(--ic-md);
+  width: var(--ic-lg);
   aspect-ratio: 1 / 1;
   margin-right: 10px;
 }
@@ -200,8 +274,8 @@ body {
 }
 
 .checkbox-lg {
-  width: 20px;
-  height: 20px;
+  width: min(20px, calc(5px + 1vw));
+  height: min(20px, calc(5px + 1vw));
   background-color: var(--clr-text);
 }
 
@@ -209,15 +283,35 @@ body {
   font-size: var(--fs-lg);
 }
 
-.btn-custom {
-  font-size: var(--fs-lg);
+.btn-primary {
+  color: var(--clr-text);
   background-color: var(--clr-bg-btn);
-  border: solid var(--clr-text);
+  border: var(--bs-md) solid var(--clr-text);
+  margin: var(--mg-lg);
+  border-radius: var(--bs-xl);
+}
+.btn-secondary {
+  color: var(--clr-bg-title);
+  background-color: var(--clr-text);
+  border: var(--bs-md) solid var(--clr-bg-title);
+  margin: var(--mg-lg);
+  border-radius: var(--bs-xl);
+}
+.btn-danger {
+  color: var(--clr-text);
+  background-color: var(--clr-red);
+  border: var(--bs-md) solid var(--clr-text);
+  margin: var(--mg-lg);
+  border-radius: var(--bs-xl);
 }
 
 .btn-custom-pill {
   font-size: var(--fs-lg);
-  border: solid var(--clr-border);
+  border: var(--bs-md) solid var(--clr-border);
+}
+
+.form-control {
+  padding: var(--pd-lg);
 }
 
 .form-control::placeholder {
@@ -227,5 +321,13 @@ body {
 
 .input-group-custom > p, .input-group-custom > a {
   font-size: var(--fs-lg);
-  padding: 5px;
+}
+
+
+.online-status {
+  background-color: var(--clr-green);
+  width: var(--ic-sm);
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  margin: var(--mg-lg);
 }
