--- a/project/nginx/frontend/templates/profile.html
+++ b/project/nginx/frontend/templates/profile.html
@@ -25,28 +25,28 @@
       </div>
       <div class="bk-profile-stat font-bs">
         <div class="micro-item">
-          <p>WIN / LOSE</p>
+          <p data-i18n="win_lose">WIN / LOSE</p>
           <p id="winLose" class="font-pixel font-stk-h3 stat"></p>
         </div>
         <div class="micro-item">
-          <p>TOTAL</p>
+          <p data-i18n="total">TOTAL</p>
           <p id="totalPlay" class="font-pixel font-stk-h3 stat"></p>
         </div>
         <div class="micro-item">
-          <p>TOURNAMENT WON</p>
+          <p data-i18n="tour_won">TOURNAMENT WON</p>
           <p id="tourWon" class="font-pixel font-stk-h3 stat"></p>
         </div>
         <div class="micro-item">
-          <p>TOURNAMENT JOIN</p>
+          <p data-i18n="tour_join">TOURNAMENT JOIN</p>
           <p id="tourPlay" class="font-pixel font-stk-h3 stat"></p>
         </div>
       </div>
       <div class="d-flex justify-content-evenly">
         <a href="/#">
-          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg">MATCH HISTORY &gt;&gt;</button>
+          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="match_history">MATCH HISTORY &gt;&gt;</button>
         </a>
         <a href="/#">
-          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg">LEADERBOARD &gt;&gt;</button>
+          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="leaderboard">LEADERBOARD &gt;&gt;</button>
         </a>
       </div>
       <div class="d-flex justify-content-evenly align-item">
@@ -59,7 +59,7 @@
         </a>
       </div>
       <div class="bk-item bk-friend-list-title">
-        <h1 class="font-pixel font-stk-h3 friend-title h-md">Friends</h1>
+        <h1 class="font-pixel font-stk-h3 friend-title h-md" data-i18n="friends">Friends</h1>
         <ol class="d-flex flex-column align-items-center overflow-auto bk-friend-list" id="friend-scroll">
       </div>
       </ol>
@@ -90,26 +90,26 @@
           </div>
           <div class="bk-profile-stat font-bs">
             <div class="micro-item">
-              <p>WIN / LOSE</p>
+              <p data-i18n="win_lose">WIN / LOSE</p>
               <p id="friendWinLose" class="font-pixel font-stk-h3 stat"></p>
             </div>
             <div class="micro-item">
-              <p>TOTAL</p>
+              <p data-i18n="total">TOTAL</p>
               <p id="friendTotalPlay" class="font-pixel font-stk-h3 stat"></p>
             </div>
             <div class="micro-item">
-              <p>TOURNAMENT WON</p>
+              <p data-i18n="tour_won">TOURNAMENT WON</p>
               <p id="friendTourWon" class="font-pixel font-stk-h3 stat"></p>
             </div>
             <div class="micro-item">
-              <p>TOURNAMENT JOIN</p>
+              <p data-i18n="tour_join">TOURNAMENT JOIN</p>
               <p id="friendTourPlay" class="font-pixel font-stk-h3 stat"></p>
             </div>
           </div>
           <div class="d-flex justify-content-evenly">
             <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
-              data-bs-dismiss="modal">Back</button>
-            <a href="/#" class="font-bs-bold btn btn-danger bk-friend-button">Delete friend</a>
+              data-bs-dismiss="modal" data-i18n="back">Back</button>
+            <a href="/#" class="font-bs-bold btn btn-danger bk-friend-button" data-i18n="delete_friend">Delete friend</a>
           </div>
           <div class="d-flex justify-content-evenly align-item">
           </div>
