fixed reload javascript, fixed api profile

--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -60,7 +60,7 @@
       </div>
       <div class="bk-item bk-friend-list-title">
         <h1 class="font-pixel font-stk-h3 friend-title h-md" data-i18n="friends">Friends</h1>
-        <ol class="d-flex flex-column align-items-center overflow-auto bk-friend-list" id="friend-scroll">
+        <ol class="d-flex flex-column align-items-center overflow-auto bk-friend-list" id="friendList">
       </div>
       </ol>
     </div>
