--- a/project/frontend/templates/main.html
+++ b/project/frontend/templates/main.html
@@ -1,18 +1,18 @@
 <link rel="stylesheet" href="../css/main.css">
 
 <nav class="d-flex align-items-center justify-content-between main-header">
-  <div class="d-flex align-items-center box-profile">
+  <div class="d-flex align-items-center box-profile" id="blockProfile">
     <div class="profile-frame">
       <a href="/profile">
-        <img src="../static/svg/default-user-picture.svg" alt="profile-picture">
+        <img id="profilePicture" alt="profile-picture">
       </a>
     </div>
     <div>
-      <p class="font-bs-bold fs-lg ms-2">Wink_Warrior</p>
+      <p id="profileName" class="font-bs-bold fs-lg ms-2"></p>
     </div>
   </div>
   <div class="d-flex align-items-center justify-content-end gap-3 me-4">
-    <select class="rounded-pill font-bs-bold btn-custom-pill language-select" name="" id="languageSelect" onchange="toggleLanguage(event)">
+    <select class="rounded-pill font-bs-bold btn-custom-pill language-select" name="" id="languageSelect">
       <option value="en" data-i18n="english">English</option>
       <option value="th" data-i18n="thai">Thai</option>
     </select>
@@ -23,7 +23,7 @@
   </div>
 </nav>
 <div class="d-flex flex-column justify-content-center circle-background">
-  <h2 class="d-flex justify-content-center m-0 font-train font-stk-h1 main-item1" data-i18n="welcome">WELCOME</h2>
+  <h2 class="d-flex justify-content-center m-0 font-train font-stk-h1 main-item1" data-i18n="welcome"></h2>
   <h3 class="d-flex justify-content-end m-0 font-train font-stk-h3 main-item2" data-i18n="to">TO</h3>
   <h3 class="d-flex justify-content-center m-0 font-pixel font-stk-h3 main-item3">42</h3>
   <h5 class="d-flex justify-content-center font-pixel font-stk-h3 main-item4">PONGAME</h5>
