--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -54,9 +54,17 @@
     </div>
     <div class="bk-friend">
       <div class="d-flex align-items-start justify-content-end bk-friend-title">
-        <a href="/">
-          <img class="ic-xl btn-hover mt-0 me-0" src="../static/svg/home.svg" alt="sign out button">
+        <!-- popup notification -->
+        <img class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#notificationModal"
+          src="../static/svg/notification.svg" alt="notification button"
+        >
+        <a class="m-0 p-0" href="/">
+          <img class="ic-xl btn-hover p-0 mt-0 me-0" src="../static/svg/home.svg" alt="sign out button">
         </a>
+        <!-- popup exit -->
+        <img class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#logoutModal"
+          src="../static/svg/Sign-out.svg" alt="Logout button"
+        >
       </div>
       <div class="bk-item bk-friend-list-title">
         <h1 class="font-pixel font-stk-h3 friend-title h-md" data-i18n="friends">Friends</h1>
@@ -67,7 +75,7 @@
   </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal Friend Profile -->
 <div class="modal fade" id="profileModal" tabindex="-1">
   <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
     <div class="modal-content">
@@ -112,6 +120,25 @@
             <a href="/#" class="font-bs-bold btn btn-danger bk-friend-button" data-i18n="delete_friend">Delete friend</a>
           </div>
           <div class="d-flex justify-content-evenly align-item">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Notification -->
+<div class="modal fade" id="notificationModal" tabindex="-1">
+  <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div id="friend-profile" class="d-flex bk-notification">
+          <div class="d-flex justify-content-center align-items-center">
+            <h1 class="font-bs-bold h-md" data-i18n="friend_requests">Friend Requests</h1>
+          </div>
+          <div class="d-flex justify-content-evenly">
+            <button type="button" class="font-bs-bold btn btn-secondary bk-friend-button"
+              data-bs-dismiss="modal" data-i18n="back">Back</button>
           </div>
         </div>
       </div>
