--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -17,7 +17,7 @@
     <div class="d-flex block-login-input">
       <img class="icon-custom" src="../static/svg/password.svg" alt="lock image">
       <input type="password" class="border border-0 text-center font-bs-bold input-login-custom login-input"
-        name="password" placeholder="Password" required>
+        autocomplete="on" name="password" placeholder="Password" required>
       <img class="icon-custom btn-eye btn-hover" src="../static/svg/showpassword.svg" alt="eye image"
         onclick="togglePassword(this.previousElementSibling)">
     </div>
