--- a/project/frontend/templates/signup.html
+++ b/project/frontend/templates/signup.html
@@ -3,28 +3,37 @@
 <div class="d-flex align-items-end justify-content-center block-title">
   <h1 class="font-bs-bold title-1">New user? Sign Up</h1>
 </div>
-<form action="#" method="post">
+<form id="signupForm">
   <div class="container d-flex flex-column align-items-center block-signup">
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="text" class="form-control mx-2 font-bs fs-xl" placeholder="User name">
+      <input type="text" class="form-control mx-2 font-bs fs-xl"
+        id="username" name="username" placeholder="User name" maxlength="20">
     </div>
+    <p id="username-error" class="font-bs text-error ms-3 p-0"></p>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="text" class="form-control mx-2 font-bs fs-xl" placeholder="Avatar name">
+      <input type="text" class="form-control mx-2 font-bs fs-xl"
+        id="avatarName" name="avatarName" placeholder="Avatar name" maxlength="20">
     </div>
+    <p id="avatarName-error" class="font-bs text-error ms-3 p-0"></p>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="password" class="form-control mx-2 font-bs fs-xl" placeholder="Password">
+      <input type="password" class="form-control mx-2 font-bs fs-xl" id="inputPassword"
+        id="password" name="password" autocomplete="on" placeholder="Password">
       <div class="input-group-append mx-1">
         <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/showpassword.svg" alt="eye icon"
           onclick="togglePassword(this.parentNode.previousElementSibling)">
       </div>
     </div>
+    <p id="password-error" class="font-bs text-error ms-3 p-0"></p>
+    <div id="inputPasswordError" class="font-bs text-error ms-3"></div>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="password" class="form-control mx-2 font-bs fs-xl" placeholder="Confirm Password">
+      <input type="password" class="form-control mx-2 font-bs fs-xl"
+        id="password2" name="password2" autocomplete="on" placeholder="Confirm Password">
       <div class="input-group-append mx-1">
         <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/showpassword.svg" alt="eye icon"
           onclick="togglePassword(this.parentNode.previousElementSibling)">
       </div>
     </div>
+    <p id="password2-error" class="font-bs text-error ms-3 p-0"></p>
     <!-- <div class="font-bs error-text">Password must be the same!</div> -->
     <div class="d-flex align-items-center from-check mt-3">
       <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me">
@@ -33,7 +42,7 @@
       </label>
     </div>
     <div class="d-flex align-self-stretch">
-      <a href="/signup" class="flex-grow-1 font-bs-bold btn btn-primary fs-xl">Create account</a>
+      <button type="submit" class="flex-grow-1 font-bs-bold btn btn-primary fs-xl">Create account</button>
     </div>
   </div>
 </form>
