--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -12,21 +12,22 @@
       <img class="icon-custom" src="../static/svg/username.svg" alt="user image">
       <input type="text" class="border border-0 text-center font-bs-bold input-login-custom login-input"
         name="username" placeholder="Username" required>
-      <div class="icon-custom"></div>
+      <img class="icon-custom btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
+        style="visibility: hidden;">
     </div>
     <div class="d-flex block-login-input">
-      <img class="icon-custom" src="../static/svg/password.svg" alt="lock image">
+      <img class="icon-custom" src="../static/svg/lock.svg" alt="lock image">
       <input type="password" class="border border-0 text-center font-bs-bold input-login-custom login-input"
         autocomplete="on" name="password" placeholder="Password" required>
-      <img class="icon-custom btn-eye btn-hover" src="../static/svg/showpassword.svg" alt="eye image"
+      <img class="icon-custom btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
         onclick="togglePassword(this.previousElementSibling)">
     </div>
-    <div class="font-bs text-error" id="popOutErrMsg">incorrect username or password!</div>
+    <p id="login-error" class="font-bs text-error p-0" data-i18n="error_login"></p>
     <div class="d-flex justify-content-end align-items-center from-check">
       <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me">
       <label class="form-check-label font-bs-bold ms-2 checkbox-label-lg" for="remember-me">Remember Me</label>
     </div>
-    <div class="d-flex rows gap-3">
+    <div class="d-flex rows block-login">
       <button type="submit" class="font-bs-bold btn btn-primary col fs-xl">Login</button>
       <a href="#" class="font-bs-bold btn btn-primary col fs-xl">Login with 42</a>
     </div>
