--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -10,7 +10,7 @@
           </div>
         </div>
         <div class="d-flex flex-column align-items-center font-bs">
-          <h1 class="h-md" id="avatarName"></h1>
+          <h1 class="h-md" id="displayName"></h1>
           <div>
             <img class="ic-md" src="../static/svg/email_icon.svg" alt="email icon">
             <p class="d-inline-block fs-lg" id="email"></p>
