--- a/project/frontend/templates/signup.html
+++ b/project/frontend/templates/signup.html
@@ -6,34 +6,38 @@
 <form id="signupForm">
   <div class="container d-flex flex-column align-items-center block-signup">
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="text" class="form-control mx-2 font-bs fs-xl"
+      <img class="input-icon-custom" src="../static/svg/username.svg" alt="user image">
+      <input type="text" class="form-control mx-1 font-bs fs-xl"
         id="username" name="username" placeholder="User name" maxlength="20">
     </div>
-    <p id="username-error" class="font-bs text-error ms-3 p-0"></p>
+    <p id="username-error" class="font-bs text-error ms-3 p-0" data-i18n="error_username_invalid"></p>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="text" class="form-control mx-2 font-bs fs-xl"
-        id="avatarName" name="avatarName" placeholder="Avatar name" maxlength="20">
+      <img class="input-icon-custom" src="../static/svg/email.svg" alt="user image">
+      <input type="email" class="form-control mx-1 font-bs fs-xl"
+        id="email" name="email" placeholder="Email">
     </div>
     <p id="avatarName-error" class="font-bs text-error ms-3 p-0"></p>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="password" class="form-control mx-2 font-bs fs-xl" id="inputPassword"
+      <img class="input-icon-custom" src="../static/svg/lock.svg" alt="user image">
+      <input type="password" class="form-control mx-1 font-bs fs-xl" id="inputPassword"
         id="password" name="password" autocomplete="on" placeholder="Password">
       <div class="input-group-append mx-1">
-        <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/showpassword.svg" alt="eye icon"
+        <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/eye.svg" alt="eye icon"
           onclick="togglePassword(this.parentNode.previousElementSibling)">
       </div>
     </div>
     <p id="password-error" class="font-bs text-error ms-3 p-0"></p>
     <div id="inputPasswordError" class="font-bs text-error ms-3"></div>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
-      <input type="password" class="form-control mx-2 font-bs fs-xl"
+      <img class="input-icon-custom" src="../static/svg/lock.svg" alt="user image">
+      <input type="password" class="form-control mx-1 font-bs fs-xl"
         id="password2" name="password2" autocomplete="on" placeholder="Confirm Password">
       <div class="input-group-append mx-1">
-        <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/showpassword.svg" alt="eye icon"
+        <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/eye.svg" alt="eye icon"
           onclick="togglePassword(this.parentNode.previousElementSibling)">
       </div>
     </div>
-    <p id="password2-error" class="font-bs text-error ms-3 p-0"></p>
+    <p id="password2-error" class="font-bs text-error ms-3 p-0" data-i18n="error_confirm_password"></p>
     <!-- <div class="font-bs error-text">Password must be the same!</div> -->
     <div class="d-flex align-items-center from-check mt-3">
       <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me">
