add route history, leaderboard

--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -42,10 +42,10 @@
         </div>
       </div>
       <div class="d-flex justify-content-evenly">
-        <a href="/#">
+        <a href="/history">
           <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="match_history">MATCH HISTORY &gt;&gt;</button>
         </a>
-        <a href="/#">
+        <a href="/leaderboard">
           <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="leaderboard">LEADERBOARD &gt;&gt;</button>
         </a>
       </div>
