update api profile

--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -24,7 +24,7 @@
     </div>
     <p id="login-error" class="font-bs text-error p-0" data-i18n="error_login"></p>
     <div class="d-flex justify-content-end align-items-center from-check">
-      <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me">
+      <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me" name="remember">
       <label class="form-check-label font-bs-bold ms-2 checkbox-label-lg" for="remember-me">Remember Me</label>
     </div>
     <div class="d-flex rows block-login">
