--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -9,7 +9,7 @@
             <img id="profileImage" alt="profile-picture">
           </div>
         </div>
-        <div class="d-flex flex-column align-items-center font-bs">
+        <div class="d-flex flex-column align-items-center justify-content-center font-bs">
           <h1 class="h-md" id="displayName"></h1>
           <div>
             <img class="ic-md" src="../static/svg/email_icon.svg" alt="email icon">
