--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -16,17 +16,18 @@
     </div>
   </div>
 
-  <form action="" class="form-block">
+  <form id="profileForm" class="form-block">
     <div class="d-flex flex-grow-1 first-block-input">
       <div class="col">
         <div class="d-flex flex-column h-100">
           <div class="input-group input-group-custom rounded-pill d-flex align-items-center edit-input">
             <input type="text" id="editName" class="form-control mx-1 font-bs fs-xxl"
-              data-i18n="display_name" placeholder="Display name">
+              id="displayName" name="displayName" data-i18n="display_name" placeholder="Display name">
           </div>
+          <p id="displayName-error" class="font-bs text-error ms-3 p-0" data-i18n="error_display_name_same"></p>
           <div class="input-group input-group-custom rounded-pill d-flex align-items-center edit-input">
             <input type="email" class="form-control mx-1 font-bs fs-xxl"
-              data-i18n="email" placeholder="Email">
+              id="email" name="email" data-i18n="email" placeholder="Email">
           </div>
         </div>
       </div>
@@ -34,23 +35,25 @@
         <div class="d-flex flex-column h-100 justify-content-start">
           <div class="input-group input-group-custom rounded-pill d-flex align-items-center edit-input">
             <input type="password" class="form-control mx-1 font-bs fs-xxl" autocomplete="on"
-              data-i18n="password" placeholder="Password">
+              id="password" name="password" data-i18n="password" placeholder="Password">
             <img class="btn-eye btn-hover ic-lg mx-1" src="../static/svg/eye.svg" alt="eye icon"
               onclick="togglePassword(this.previousElementSibling)">
           </div>
+          <p id="password-error" class="font-bs text-error ms-3 p-0"></p>
           <div class="input-group input-group-custom rounded-pill d-flex align-items-center edit-input">
             <input type="password" class="form-control mx-1 font-bs fs-xxl" autocomplete="on"
-              data-i18n="confirm_password" placeholder="Confirm Password">
+              id="password2" name="password2" data-i18n="confirm_password" placeholder="Confirm Password">
             <img class="btn-eye btn-hover ic-lg mx-1" src="../static/svg/eye.svg" alt="eye icon"
               onclick="togglePassword(this.previousElementSibling)">
           </div>
+          <p id="password2-error" class="font-bs text-error ms-3 p-0" data-i18n="error_confirm_password"></p>
         </div>
       </div>
     </div>
     <div class="second-block-input">
       <div class="d-flex position-relative">
-        <textarea class="form-control font-bs bio-input" name="" id="bioInput" placeholder="About me..."
-          data-i18n="about_me" maxlength="200"></textarea>
+        <textarea class="form-control font-bs bio-input" placeholder="About me..."
+          id="bio" name="bio" data-i18n="about_me" maxlength="200"></textarea>
         <div class="font-bs char-count">0/200</div>
       </div>
       <div class="d-flex flex-column h-100">
@@ -64,8 +67,9 @@
             <button type="button" class="font-bs-bold btn btn-secondary edit-btn" data-bs-dismiss="modal"
               data-i18n="back">Back</button>
           </a>
-          <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-dismiss="modal"
-            data-i18n="save">Save</button>
+          <!-- <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-dismiss="modal"
+            data-i18n="save">Save</button> -->
+          <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-i18n="save">Save</button>
         </div>
       </div>
     </div>
