--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -64,7 +64,7 @@
         </div>
         <div class="d-flex justify-content-between">
           <a href="/profile">
-            <button type="button" class="font-bs-bold btn btn-secondary edit-btn" data-bs-dismiss="modal"
+            <button type="button" class="font-bs-bold btn btn-secondary edit-btn"
               data-i18n="back">Back</button>
           </a>
           <!-- <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-dismiss="modal"
