--- a/project/frontend/templates/signup.html
+++ b/project/frontend/templates/signup.html
@@ -54,3 +54,28 @@
   Already have an account?
   <a href="/">Sign in</a>
 </div>
+
+<!-- Modal Create Account Success -->
+<div class="modal fade" id="successCreateAccountModal" tabindex="-1">
+  <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+    <div class="modal-content popup-content">
+      <div class="modal-body">
+        <div class="popup-frame">
+          <div class="popup-header-icon">
+            <img src="../static/svg/success.svg" alt="alert picture">
+          </div>
+          <h1 class="font-bs-bold fs-xl" style="color: #ffffff;">SUCCESS</h1>
+          <div class="d-flex justify-content-center popup-body">
+            <p class="font-bs fs-lg" style="color: #ffffff;">
+              YOUR ACCOUNT HAS BEEN CREATED
+            </p>
+          </div>
+          <div class="d-flex justify-content-evenly popup-footer">
+            <button type="button" class="font-bs-bold btn btn-primary" id="btn-success"
+              data-bs-dismiss="modal">Back to login</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
