--- a/project/frontend/templates/main.html
+++ b/project/frontend/templates/main.html
@@ -15,6 +15,7 @@
     <select class="rounded-pill font-bs-bold btn-custom-pill language-select" name="" id="languageSelect">
       <option value="en" data-i18n="english">English</option>
       <option value="th" data-i18n="thai">Thai</option>
+      <option value="fr" data-i18n="france">France</option>
     </select>
     <!-- popup exit -->
     <img class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#logoutModal"
