--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -18,11 +18,14 @@
     <div class="d-flex block-login-input">
       <img class="icon-custom" src="../static/svg/lock.svg" alt="lock image">
       <input type="password" class="border border-0 text-center font-bs-bold input-login-custom login-input"
-        autocomplete="on" name="password" placeholder="Password" required>
+        id="login-password" autocomplete="on" name="password" placeholder="Password" required>
       <img class="icon-custom btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
         onclick="togglePassword(this.previousElementSibling)">
     </div>
-    <p id="login-error" class="font-bs text-error p-0" data-i18n="error_login"></p>
+    <div id="login-error" class="font-bs p-0">
+      <p class="text-error" data-i18n="error_login"></p>
+      <p class="text-error" data-i18n="error_server"></p>
+    </div>
     <div class="d-flex justify-content-end align-items-center from-check">
       <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me" name="remember">
       <label class="form-check-label font-bs-bold ms-2 checkbox-label-lg" for="remember-me">Remember Me</label>
