--- a/project/frontend/templates/signup.html
+++ b/project/frontend/templates/signup.html
@@ -8,19 +8,22 @@
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
       <img class="input-icon-custom" src="../static/svg/username.svg" alt="user image">
       <input type="text" class="form-control mx-1 font-bs fs-xl"
-        id="username" name="username" placeholder="User name" maxlength="20">
+        id="username" name="username" placeholder="User name" maxlength="20" required>
     </div>
-    <p id="username-error" class="font-bs text-error ms-3 p-0" data-i18n="error_username_invalid"></p>
+    <div id="username-error" class="align-self-start font-bs ms-3 p-0">
+      <p class="text-error" data-i18n="error_username_invalid"></p>
+      <p class="text-error" data-i18n="error_username_same"></p>
+    </div>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
       <img class="input-icon-custom" src="../static/svg/email.svg" alt="user image">
       <input type="email" class="form-control mx-1 font-bs fs-xl"
-        id="email" name="email" placeholder="Email">
+        id="email" name="email" placeholder="Email" required>
     </div>
     <p id="avatarName-error" class="font-bs text-error ms-3 p-0"></p>
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
       <img class="input-icon-custom" src="../static/svg/lock.svg" alt="user image">
       <input type="password" class="form-control mx-1 font-bs fs-xl" id="inputPassword"
-        id="password" name="password" autocomplete="on" placeholder="Password">
+        id="password" name="password" autocomplete="on" placeholder="Password" required>
       <div class="input-group-append mx-1">
         <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/eye.svg" alt="eye icon"
           onclick="togglePassword(this.parentNode.previousElementSibling)">
@@ -31,14 +34,16 @@
     <div class="input-group input-group-custom rounded-pill d-flex align-items-center">
       <img class="input-icon-custom" src="../static/svg/lock.svg" alt="user image">
       <input type="password" class="form-control mx-1 font-bs fs-xl"
-        id="password2" name="password2" autocomplete="on" placeholder="Confirm Password">
+        id="password2" name="password2" autocomplete="on" placeholder="Confirm Password" required>
       <div class="input-group-append mx-1">
         <img class="btn-eye btn-hover input-icon-custom" src="../static/svg/eye.svg" alt="eye icon"
           onclick="togglePassword(this.parentNode.previousElementSibling)">
       </div>
     </div>
-    <p id="password2-error" class="font-bs text-error ms-3 p-0" data-i18n="error_confirm_password"></p>
-    <!-- <div class="font-bs error-text">Password must be the same!</div> -->
+    <div id="password2-error" class="align-self-start font-bs ms-3 p-0 text-start">
+      <p class="text-error" data-i18n="error_confirm_password"></p>
+      <p class="text-error" data-i18n="error_server"></p>
+    </div>
     <div class="d-flex align-items-center from-check mt-3">
       <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me">
       <label class="form-check-label font-bs-bold ms-2 checkbox-label-lg" for="remember-me">
