added header to match-history page

--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -1,1 +1,10 @@
-<h1 style="color: white;">Match History</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/match-history.css">
+</head>
+<body>
+    <h1>MATCH HISTORY</h1>
+</body>
+</html>
