update fetch edit profile

--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -21,7 +21,7 @@
       <div class="col">
         <div class="d-flex flex-column h-100">
           <div class="input-group input-group-custom rounded-pill d-flex align-items-center edit-input">
-            <input type="text" id="editName" class="form-control mx-1 font-bs fs-xxl"
+            <input type="text" class="form-control mx-1 font-bs fs-xxl"
               id="displayName" name="displayName" data-i18n="display_name" placeholder="Display name">
           </div>
           <p id="displayName-error" class="font-bs text-error ms-3 p-0" data-i18n="error_display_name_same"></p>
