--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -7,8 +7,8 @@
       <div class="position-relative picture-frame">
         <img id="profile-picture" src="../static/svg/default-user-picture.svg" alt="profile picture">
         <div class="upload-btn">
-          <input type="file" id="file" class="d-none" accept=".png, .jpg, .jpeg">
-          <label for="file" class="m-0 p-0 file-label">
+          <input type="file" id="fileInput" class="d-none" accept=".png, .jpg, .jpeg">
+          <label for="fileInput" class="m-0 p-0 file-label">
             <img class="btn btn-primary ic-lg m-0 p-1" src="../static/svg/edit_button.svg" alt="edit button">
           </label>
         </div>
