--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -15,7 +15,7 @@
             <img class="ic-md" src="../static/svg/email_icon.svg" alt="email icon">
             <p class="d-inline-block fs-lg" id="email"></p>
           </div>
-          <p class="fs-md bio-box" id="bio"></p>
+          <p class="fs-lg bio-box" id="bio"></p>
         </div>
         <div class="edit-button">
           <a class="" href="/editProfile">
