--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -9,17 +9,17 @@
 <form id="login-form" action="#" method="post">
   <div class="container col-xxl-4 col-xl-5 col-sm-5 d-flex flex-column">
     <div class="d-flex block-login-input ">
-      <img class="icon-custom" src="../static/svg/username.svg" alt="user image">
+      <img class="ic-xl" src="../static/svg/username.svg" alt="user image">
       <input type="text" class="border border-0 text-center font-bs-bold input-login-custom login-input"
         name="username" placeholder="Username" required>
-      <img class="icon-custom btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
+      <img class="ic-xl btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
         style="visibility: hidden;">
     </div>
     <div class="d-flex block-login-input">
-      <img class="icon-custom" src="../static/svg/lock.svg" alt="lock image">
+      <img class="ic-xl" src="../static/svg/lock.svg" alt="lock image">
       <input type="password" class="border border-0 text-center font-bs-bold input-login-custom login-input"
         id="login-password" autocomplete="on" name="password" placeholder="Password" required>
-      <img class="icon-custom btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
+      <img class="ic-xl btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
         onclick="togglePassword(this.previousElementSibling)">
     </div>
     <div id="login-error" class="font-bs p-0">
