added: icon-menu to match-history-page

--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -5,6 +5,16 @@
 	<link rel="stylesheet" href="../css/match-history.css">
 </head>
 <body>
+	<!-- icon menu -->
+	<div class="icon-menu-container">
+		<img class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notificationModal"
+		  src="../static/svg/notification.svg" alt="notification button"
+		>
+        <a class="m-0 p-0" href="/">
+          <img class="icon-menu ic-xl btn-hover p-0 mt-0 me-0" src="../static/svg/home.svg" alt="Home button">
+        </a>
+	</div>
+
 	<h1>MATCH HISTORY</h1>
 
 	<!-- headline -->
