--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="../css/match-history.css">
+	<link rel="stylesheet" href="../css/profile.css">
 </head>
 <body>
 	<!-- icon menu -->
@@ -15,32 +16,43 @@
         </a>
 	</div>
 
-	<h1>MATCH HISTORY</h1>
+	<h1 class="h-lg">MATCH HISTORY</h1>
 
-	<!-- headline -->
-	<div id="headline" class="container-fluid">
+	<!-- <div id="my-profile">
+		<div class="profile-image">
+			<img id="profileImage" alt="profile-picture">
+		</div>
+	</div> -->
+
+	<!-- table headline -->
+	<div id="headline" class="container-fluid ">
 		<div class="row">
 			<div class="col-3">
-			Player 1
+				Player 1
 			</div>
 			<div class="col">
-			Score
+				Score
 			</div>
 			<div class="col-3">
-			Player 2
+				Player 2
 			</div>
 			<div class="col-3">
-			Date
+				Date
 			</div>
 			<div class="col">
-			Time
+				Time
 			</div>
 		</div>
 	  </div>
 
 	<!-- tables -->
 	<div id="match-history-table" class="container-fluid"></div>
-	<script src="../js/gameUI/history-table.js"></script>
+	<!-- <div id="my-profile">
+		<div class="col">
+			<img id="profileImage" alt="profile-picture">
+		</div>
+	</div> -->
+	<!-- <script src="../js/gameUI/history-table.js"></script> -->
 
 	<!-- button -->
 	<div class="wrapper">
