fixed game page

--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -14,10 +14,17 @@
   </a>
 </div>
 
-<div id="game-page">
-  <div style="background-color: bisque;">
+<div class="d-flex justify-content-center align-items-center h-100" id="game-page">
+  <div>
     <center>
       <canvas id="gameArea" width="1024" height="600"></canvas>
+      <!-- <script type="module" src="../js/gameUI/utils.js"></script>
+      <script type="module" src="../js/gameUI/main-menu.js"></script>
+      <script type="module" src="../js/gameUI/tournament-board.js"></script>
+      <script type="module" src="../js/gameUI/players-board.js"></script>
+      <script type="module" src="../js/gameUI/online-menu.js"></script>
+      <script type="module" src="../js/gameUI/online-board.js"></script>
+      <script src="../js/gamePlay/Main.js" type="module"></script> -->
     </center>
   </div>
 </div>
