add popup at index, fix redir to login if token is expired

--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -61,5 +61,10 @@
 			<button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="GAME MENU">GAME MENU &gt;&gt;</button>
 		</a>
 	</div>
+
+
+	<!-- Test Modal Profile (Must be remove) -->
+  <ol class="d-flex flex-column align-items-center overflow-auto bk-friend-list scroll-custom" id="friendList"></ol>
+
 </body>
 </html>
