--- a/project/frontend/css/login.css
+++ b/project/frontend/css/login.css
@@ -14,6 +14,8 @@
 }
 
 .block-login-input {
+  display: flex;
+  justify-content: space-between;
   border-bottom: var(--bs-lg)  solid var(--clr-border);
   font-size: var(--fs-xxl);
   padding-bottom: var(--bs-xl);
