--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -8,14 +8,14 @@
 </div>
 <form id="login-form" action="#" method="post">
   <div class="container col-xxl-4 col-xl-5 col-sm-5 d-flex flex-column">
-    <div class="d-flex block-login-input ">
+    <div class="block-login-input">
       <img class="ic-xl" src="../static/svg/username.svg" alt="user image">
       <input type="text" class="border border-0 text-center font-bs-bold input-login-custom login-input"
         name="username" placeholder="Username" required>
       <img class="ic-xl btn-eye btn-hover" src="../static/svg/eye.svg" alt="eye image"
         style="visibility: hidden;">
     </div>
-    <div class="d-flex block-login-input">
+    <div class="block-login-input">
       <img class="ic-xl" src="../static/svg/lock.svg" alt="lock image">
       <input type="password" class="border border-0 text-center font-bs-bold input-login-custom login-input"
         id="login-password" autocomplete="on" name="password" placeholder="Password" required>
